--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,12 @@ article{
     background-color: #896bee;
 }
 
-header{
-
-}
-
 img{
     width: 200px;
     border-style: solid;
     border-width: 5px;
     border-color: #6beeca;
-    border-radius: 1em;
+    border-radius: 1em 0.5em 1em 0.5em;
 }
 
 h1{
