--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Inter:wght@600&display=swap');
 
+html{
+    height: 100%;
+}
 
 body{
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 article{
@@ -17,26 +22,26 @@ article{
     align-items: center;
     */
     height: 650px;
-    background-color: #896bee;
+    background-color: #3A57C3;
 }
 
 img{
     width: 200px;
     border-style: solid;
     border-width: 5px;
-    border-color: #6beeca;
+    border-color: #E84D90;
     border-radius: 1em 0.5em 1em 0.5em;
 }
 
 h1{
     font-family: 'Agbalumo', sans-serif;
-    color: #6beeca;
+    color: #E84D90;
     text-align: center;
 }
 
 p{
     font-size: 1.2em;
-    color: #6beeca;
+    color: #E84D90;
     font-family: 'Inter', sans-serif;
     text-align: center;
     margin: 0px;
@@ -57,30 +62,32 @@ button{
     font-family: 'Inter', sans-serif;
     font-size: 0.8em;
     text-transform: uppercase;
-    color: #896bee;
+    color: #3A57C3;
 }
 
 button:first-child{
-    border-color: #6beeca;
+    border-color: #E84D90;
 }
 
 button:last-child{
     border-color: #f0f0f0;
-    background-color: #6beeca;
+    background-color: #E84D90;
 }
 
 button:first-child:hover{
-    color:#6beeca;
-    background-color:#896bee;
+    color:#E84D90;
+    background-color:#3A57C3;
 }
 
 button:last-child:hover{
-    color: #6beeca;
-    background-color:#896bee;
+    color: #E84D90;
+    background-color:#3A57C3;
 }
 
 /*
 6beeca
 896bee
 f0f0f0
+
+#3A57C3
 */
